--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
+    "server": "tsx src/server.ts",
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
@@ -17,6 +18,10 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@fastify/cors": "^11.2.0",
+    "better-auth": "^1.4.10",
+    "fastify": "^5.6.2",
+    "mysql2": "^3.16.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4",
@@ -38,11 +43,14 @@
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "~10.6.2",
+    "fastify-tsconfig": "^3.0.0",
     "jiti": "^2.6.1",
     "jsdom": "^27.3.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.7.4",
     "sass": "^1.97.2",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "~5.9.3",
     "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.5",
