--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@fastify/cors": "^11.2.0",
     "better-auth": "^1.4.10",
+    "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "mysql2": "^3.16.0",
     "pinia": "^3.0.4",
