--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "better-auth": "^1.4.10",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
+    "fastify-plugin": "^5.1.0",
     "mysql2": "^3.16.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.26",
